# dev-cli

./: .gitignore  Cargo.toml  README.md  verify_ctx.sh
config/: default.toml
src/: app.rs  cli.rs  config.rs  main.rs
src/config/: load.rs  mod.rs  model.rs
src/modules/: mod.rs
src/modules/ctx/: command.rs  mod.rs  save.rs  storage.rs  switch.rs
src/modules/db/: command.rs
src/modules/docs/: command.rs
src/modules/git/: command.rs  mod.rs
src/modules/secrets/: command.rs
src/modules/snip/: add.rs  command.rs  mod.rs  run.rs  search.rs  storage.rs
src/modules/wtf/: api.rs  cache.rs  capture.rs  command.rs  mod.rs
src/platform/: mod.rs  shell.rs
src/state/: mod.rs  sqlite.rs  store.rs
src/utils/: env.rs  llm.rs  mod.rs  platform.rs  process.rs
