[package]
name = "dev-cli"
version = "0.1.0"
edition = "2021"
authors = ["dev-cli"]
description = " The Ultimate Developer CLI Tool"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.8"
indicatif = "0.17"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
console = "0.15"
lazy_static = "1.4"
regex = "1.9"
