[package]
name = "dev"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
anyhow = "1.0"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
regex = "1.10"

